.temp/is_rest_errors.txt
´╗┐cargo :    Compiling js2zig-core v0.7.3 (C:\Users\18988\RustroverProjects\js2rust\js2zig-core)
ŠëÇňťĘńŻŹšŻ« Ŕíî:91 ňşŚšČŽ: 46
+ ... ojects\js2rust; cargo test -p js2zig-core --lib --no-run 2>&1 | Out-F ...
+                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling js...st\js2zig-core):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\emit\mod.rs:201:17
    |
201 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\emit\mod.rs:206:17
    |
206 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
    --> js2zig-core\src\zigir\lower\mod.rs:1118:29
     |
1118 |                 params.push(IrParam {
     |                             ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
    --> js2zig-core\src\zigir\lower\mod.rs:1128:33
     |
1128 |                     params.push(IrParam {
     |                                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
    --> js2zig-core\src\zigir\lower\mod.rs:2183:33
     |
2183 |                     params.push(IrParam {
     |                                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
    --> js2zig-core\src\zigir\lower\mod.rs:4639:29
     |
4639 |                 params.push(IrParam {
     |                             ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
    --> js2zig-core\src\zigir\lower\mod.rs:4867:30
     |
4867 |                     .map(|p| IrParam {
     |                              ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\dead_code.rs:987:17
    |
987 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\dead_code.rs:992:17
    |
992 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\validate.rs:777:17
    |
777 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\validate.rs:782:17
    |
782 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\validate.rs:848:26
    |
848 |             params: vec![IrParam {
    |                          ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\passes\validate.rs:890:33
    |
890 |                 fn_params: vec![IrParam {
    |                                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\types.rs:845:17
    |
845 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\types.rs:850:17
    |
850 |                 IrParam {
    |                 ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\types.rs:929:29
    |
929 |             fn_params: vec![IrParam {
    |                             ^^^^^^^ missing `is_rest`

error[E0063]: missing field `is_rest` in initializer of `zigir::types::IrParam`
   --> js2zig-core\src\zigir\types.rs:983:26
    |
983 |             params: vec![IrParam {
    |                          ^^^^^^^ missing `is_rest`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `js2zig-core` (lib test) due to 17 previous errors
